[tool.poetry]
name = "adventofcode"
version = "1.0.0"
description = "My solutions to the annual Advent of Code event"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://adventofcode.com"
repository = "https://github.com/sco1/adventofcode"
packages = [{include="helpers"}]

[tool.poetry.scripts]
aoc-init = "helpers.init_puzzle:main"
set-prog = "helpers.update_progress:main"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^10.1"
networkx = "^3.1"
numpy = {version="^1.26", python = "<3.13"}
pandas = "^2.1"
rapidfuzz = "^3.5"
scipy = {version="^1.11", python = "<3.13"}
sco1-pylox = "^0.5.1"
sympy = "^1.11"

[tool.poetry.dev-dependencies]
black = "^24.0"
cogapp = "^3.3"
flake8 = "^7.0"
flake8-annotations = "^3.0"
isort = "^5.12"
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^8.0"
ruff = "^0.2"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
