[project]
name = "adventofcode"
version = "1.0.0"
description = "My solutions to the annual Advent of Code event"
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]

requires-python = ">=3.12"
dependencies = [
    "more-itertools~=10.4",
    "networkx~=3.3",
    "numpy~=2.1",
    "pandas~=2.2",
    "rapidfuzz~=3.9",
    "scipy~=1.14",
    "sco1-pylox~=0.5",
    "sympy~=1.13",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Repository = "https://github.com/sco1/adventofcode"

[project.scripts]
aoc-init = "helpers.init_puzzle:main"
set-prog = "helpers.update_progress:main"

[dependency-groups]
dev = [
    "black~=25.0",
    "cogapp~=3.4",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "flake8-define-class-attributes~=0.2",
    "ipykernel~=7.0",
    "isort~=7.0",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=9.0",
    "ruff~=0.6",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = "exhaustive-match"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv.build-backend]
module-name = "helpers"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
